[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Door/doorOpen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Door/doorLocked.png" type="Texture" id=2]
[ext_resource path="res://Assets/Door/doorClosed.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/question_003.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/sounds/pepSound1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/sounds/upgrade1.ogg" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "locked",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 96, 41 )

[node name="Door" type="Area2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -24 )
scale = Vector2( 0.72, 0.72 )
frames = SubResource( 1 )
animation = "locked"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="NearDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearDoor"]
shape = SubResource( 3 )

[node name="SoundUnlocked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Effects"

[node name="SoundLocked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0
bus = "Effects"

[node name="TimerTeleport" type="Timer" parent="."]
wait_time = 0.3

[node name="SoundTeleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="body_entered" from="NearDoor" to="." method="_on_NearDoor_body_entered"]
[connection signal="timeout" from="TimerTeleport" to="." method="_on_TimerTeleport_timeout"]
